--- a/app/src/main/res/layout/item_article_preview.xml
+++ b/app/src/main/res/layout/item_article_preview.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:layout_margin="14dp">
 
     <ImageView
         android:id="@+id/ivArticleImage"
-        android:layout_width="160dp"
+        android:layout_width="110dp"
         android:layout_height="90dp"
+        android:transitionName="img_small"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +47,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ellipsize="end"
-        android:maxLines="5"
+        android:maxLines="3"
         android:text="DESCRIPTION"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
